using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AminConts
{
    public const string PLAYER_RUN_ANIMATION = "IsRun";
    public const string PLAYER_ISGROUND = "IsGround";
    public const string PLAYER_ISAIR = "yVelocity";
    public const string PLAYER_JUMP_ANIMATION = "Jump";
    public const string PLAYER_ATTACK_ANIMATION = "Attack";
    public const string PLAYER_ATTACK2_ANIMATION = "Attack2";
    public const string PLAYER_ATTACK3_ANIMATION = "Attack3";
    public const string PLAYER_ATTACKAIR_ANIMATION = "AttackAir";
    public const string PLAYER_ATTACKUNTIL_ANIMATION = "AttackUntil";
    public const string PLAYER_ISWALL = "isWall";
    public const string PLAYER_ISCEILNG = "isCeiling";
    public const string CAN_MOVE = "canMove";
    public const string ENEMY_HASTARGET = "hasTarget";
    public const string PLAYER_DEATH = "dealthPlayer";
    public const string PLAYER_TAKE_HIT = "takehitPlayer";
    public const string ATTACK_COOLDOWN = "attackCooldown";
    public const string DEALTH_ENEMY = "dealthEnemy";
    public const string ENEMY_TAKE_HIT = "takehitEnemy";
}
